[package]
name = "automata"
version = "0.1.0"
authors = ["William Goodall <wgoodall01@gmail.com>"]
edition = "2018"

[profile.release]
debug = true # We need symbols for the profiler

[[bench]]
name = "cellular_automata"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.2"
